crates/oxc_react_compiler/tests/snapshots/error.handle-unexpected-exception-pipeline.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.handle-unexpected-exception-pipeline.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Pipeline error: Error: unexpected error", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 42, length: 23 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
