crates/oxc_react_compiler/tests/snapshots/error.hook-call-freezes-captured-identifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.hook-call-freezes-captured-identifier.tsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: SourceSpan { offset: 333, length: 1 }, primary: false }], help: Some("Modifying a value previously passed as an argument to a hook is not allowed. Consider moving the modification before calling the hook"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
