crates/oxc_react_compiler/tests/snapshots/error.hook-call-freezes-captured-memberexpr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.hook-call-freezes-captured-memberexpr.jsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 297, end: 298 }, primary: false }], help: Some("Modifying a value previously passed as an argument to a hook is not allowed. Consider moving the modification before calling the hook"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `x` after render"), span: Span { start: 265, end: 291 }, primary: false }, LabeledSpan { label: Some("This modifies `x`"), span: Span { start: 277, end: 278 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `x` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
