crates/oxc_react_compiler/tests/snapshots/error.invalid-ReactUseMemo-async-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-ReactUseMemo-async-callback.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() callbacks must return a value", labels: [LabeledSpan { label: Some("useMemo() callbacks must return a value"), span: Span { start: 51, end: 81 }, primary: false }], help: Some("This useMemo() callback doesn't return a value. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] UseMemo: useMemo() callbacks may not be async or generator functions", labels: [LabeledSpan { label: Some("Async and generator functions are not supported"), span: Span { start: 51, end: 81 }, primary: false }], help: Some("useMemo() callbacks are called once and must synchronously return a value"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] PreserveManualMemo: Existing memoization could not be preserved", labels: [LabeledSpan { label: Some("Could not preserve existing manual memoization"), span: Span { start: 51, end: 81 }, primary: false }], help: Some("React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. The inferred dependencies did not match the manually specified dependencies, which could cause the value to change more or less frequently than expected. The inferred dependency was `a`, but the source dependencies were []. Inferred dependency not present in source"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
